fix visibility

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -112,7 +112,7 @@ li {
 }
 
 .post-link{
-	font-size: 22px;
+	font-size: 32px;
 }
 
 .post-meta {
